@@ -19,6 +19,9 @@ dpkg (1.16.15+nmu1) UNRELEASED; urgency=low
     Although this should not have security implications as the buffer is
     surrounded by two arrays (so those catch accesses even if the stack
     grows up or down), and we are compiling with -fstack-protector anyway.
+  * Add a workaround to start-stop-daemon for bogus OpenVZ Linux kernels that
+    prepend, instead of appending, the " (deleted)" marker in /proc/PID/exe.
+    Closes: #731530
 
   [ Updated scripts translations ]
   * Fix typos in German (Helge Kreutzmann)
